# borderless-cli

./: Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml
src/: api.rs  cli.rs  main.rs  packager.rs  template.rs
src/cli/: deploy.rs  init.rs  link.rs  merge.rs  pack.rs  publish.rs  template.rs
templates/: init-lib-agent.rs  init-lib-contract.rs  manifest-agent.toml  manifest-contract.toml
