[package]
name = "borderless-cli"
version = "0.1.0"
edition = "2021"
authors = [ "Borderless Technologies GmbH <hello@borderless-technologies.com>" ]
keywords = [ "borderless", "commandline", "cli" ]
categories = [ "command-line-utilities" ]

[[bin]]
name = "borderless"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
cliclack = "0.3"
typed-builder = "0.21"
cargo-toml-builder = "0.3"
regex = "1.11"
ed25519-dalek = "2.1"
pem = "3.0"
hex = "0.4"
base64 = "0.22"

borderless-pkg = { version = "*", git = "https://cargo-deploy-token:def035340885577ed9e9afeec98d8156678a7a74@git.borderless-technologies.com/Borderless/borderless.git", branch = "main" }
borderless-hash = { version = "*", git = "https://cargo-deploy-token:def035340885577ed9e9afeec98d8156678a7a74@git.borderless-technologies.com/Borderless/borderless.git", branch = "main" }
rust-embed = "8.7.2"
convert_case = "0.8.0"
