[package]
name = "borderless-cli"
version = "0.1.0"
edition = "2021"
authors = [ "Borderless Technologies GmbH <hello@borderless-technologies.com>" ]
keywords = [ "borderless", "commandline", "cli" ]
categories = [ "command-line-utilities" ]

[[bin]]
name = "borderless"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
cliclack = "0.3"
base64 = "0.22"

borderless = { version = "*", git = "https://cargo-deploy-token:def035340885577ed9e9afeec98d8156678a7a74@git.borderless-technologies.com/Borderless/borderless.git", branch = "main" }
borderless-pkg = { version = "*", git = "https://cargo-deploy-token:def035340885577ed9e9afeec98d8156678a7a74@git.borderless-technologies.com/Borderless/borderless.git", branch = "main" }
borderless-hash = { version = "*", git = "https://cargo-deploy-token:def035340885577ed9e9afeec98d8156678a7a74@git.borderless-technologies.com/Borderless/borderless.git", branch = "main" }
rust-embed = "8.7.2"
convert_case = "0.8.0"
once_cell = "1.21.3"
cargo_toml = "0.22.1"
git2 = { version = "0.20.2", default-features = false }
url = { version = "2.5.4", features = ["serde"] }
reqwest = { version = "0.12.20", default-features = false, features = ["rustls-tls", "blocking"] }
